More work on bug #2627.  Fixing all of the little things.  The column sorting now works.  I also started adding user authentication using ACL.

--- a/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -29,3 +29,146 @@
 
 COM_TIMECLOCK="Timeclock"
 COM_TIMECLOCK_DESCRIPTION="This component implements a timeclock for employees to track time."
+
+COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
+
+COM_TIMECLOCK_PREFS_SAVED="Preferences Saved!"
+COM_TIMECLOCK_PREFS_FAILED="Error Saving Preferences"
+
+COM_TIMECLOCK_CUSTOMER_SAVED="Customer Saved!"
+COM_TIMECLOCK_CUSTOMER_FAILED="Error Saving Customer"
+
+COM_TIMECLOCK_HOLIDAY_SAVED="Holiday Saved!"
+COM_TIMECLOCK_HOLIDAY_FAILED="Error Saving Holiday"
+
+COM_TIMECLOCK_PROJECT_SAVED="Project Saved!"
+COM_TIMECLOCK_PROJECT_FAILED="Error Saving Project"
+COM_TIMECLOCK_PROJECT_ADD_SAVED="Project Added"
+COM_TIMECLOCK_PROJECT_ADD_FAILED="Error Adding Project"
+COM_TIMECLOCK_PROJECTS_ADD_SAVED="Projects Added"
+COM_TIMECLOCK_PROJECTS_ADD_FAILED="Error Adding Projects"
+COM_TIMECLOCK_PROJECT_REMOVE_SAVED="Project Removed"
+COM_TIMECLOCK_PROJECT_REMOVE_FAILED="Error Removing Project"
+COM_TIMECLOCK_PROJECT_NO_PROJECTS="No projects to add"
+
+COM_TIMECLOCK_TIMESHEET_SAVED="Timesheet Saved!"
+COM_TIMECLOCK_TIMESHEET_FAILED="Error Saving Timesheet"
+
+COM_TIMECLOCK_USER_SETTINGS_SAVED="User Settings Saved!"
+COM_TIMECLOCK_USER_SETTINGS_FAILED="Error Saving User Settings"
+
+COM_TIMECLOCK_FOUND_A_BUG = "Found a bug in ComTimeclock?"
+COM_TIMECLOCK_REPORT_IT_HERE = "Report it here"
+COM_TIMECLOCK_CONFIG = "Config"
+COM_TIMECLOCK_USER_CONFIGS = "User Configurations"
+COM_TIMECLOCK_CUSTOMERS = "Customers"
+COM_TIMECLOCK_PROJECTS = "Projects"
+COM_TIMECLOCK_HOLIDAYS = "Holidays"
+COM_TIMECLOCK_TIMESHEETS = "Timesheets"
+COM_TIMECLOCK_MISC_TOOLS = "Misc Tools"
+COM_TIMECLOCK_ABOUT = "About"
+COM_TIMECLOCK_THE_POLL = "The poll"
+COM_TIMECLOCK_THE_PROJECT = "The project"
+COM_TIMECLOCK_THE_TIMESHEET = "The timesheet"
+COM_TIMECLOCK_NO_USER_GIVEN = "No User given!"
+COM_TIMECLOCK_ABOUT_TIMECLOCK = "About Timeclock"
+COM_TIMECLOCK_TIMECLOCK_PREFS = "Timeclock Preferences"
+COM_TIMECLOCK_USER_SETTINGS = "User Settings"
+COM_TIMECLOCK_MAX_DAILY_HOURS = "Max Daily Hours"
+COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
+COM_TIMECLOCK_MINIMUM_NOTE = "Minimum Note"
+COM_TIMECLOCK_USER_TYPES = "User Types"
+COM_TIMECLOCK_TIMESHEET = "Timesheet"
+COM_TIMECLOCK_FIRST_PAY_PERIOD_START = "First Pay Period Start"
+COM_TIMECLOCK_PAY_PERIOD_TYPE = "Pay Period Type"
+COM_TIMECLOCK_PAY_PERIOD_LENGTH = "Pay Period Length"
+COM_TIMECLOCK_TIMESHEET_VIEW_PERIOD = "Timesheet View Period"
+COM_TIMECLOCK_VIEW_PERIOD_LENGTH = "View Period Length"
+COM_TIMECLOCK_FIRST_VIEW_PERIOD_START = "First View Period Start"
+COM_TIMECLOCK_PAID_TIME_OFF = "Paid Time Off"
+COM_TIMECLOCK_ACCRUE_PTO = "Accrue PTO"
+COM_TIMECLOCK_ACCRUAL_RATES = "Accrual Rates"
+COM_TIMECLOCK_DAYS_BEFORE_ACCRUAL_BEGINS = "Days Before Accrual Begins"
+COM_TIMECLOCK_PTO_HOURS_PER_DAY = "PTO Hours / Day"
+COM_TIMECLOCK_ACCRUAL_PERIOD = "Accrual Period"
+COM_TIMECLOCK_ACCRUAL_TIME = "Accrual Time"
+COM_TIMECLOCK_DEFAULT_PTO_CARRYOVER_EXPIRATION = "Default PTO Carryover Expiration"
+COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO = "Acceptable Negative PTO"
+COM_TIMECLOCK_WORKERS_COMP = "Worker's Compensation"
+COM_TIMECLOCK_ENABLE = "Enable"
+COM_TIMECLOCK_CODES = "Codes"
+COM_TIMECLOCK_EXTRAS = "Extras"
+COM_TIMECLOCK_JPGRAPH_PATH = "JPGraph Path"
+COM_TIMECLOCK_DISABLE_TIMECLOCK = "Disable Timeclock"
+COM_TIMECLOCK_DISABLE_MESSAGE = "Disable Message"
+COM_TIMECLOCK_TIMECLOCK_CUSTOMERS = "Timeclock Customers"
+COM_TIMECLOCK_FILTER = "Filter"
+COM_TIMECLOCK_GO = "Go"
+COM_TIMECLOCK_RESET = "Reset"
+COM_TIMECLOCK_ACTIVE = "Active"
+COM_TIMECLOCK_BILL_FOR_PTO = "Bill for Paid Time Off"
+COM_TIMECLOCK_CONTACT_NAME = "Contact Name"
+COM_TIMECLOCK_COMPANY = "Company"
+COM_TIMECLOCK_ADDRESS1 = "Address1"
+COM_TIMECLOCK_ADDRESS2 = "Address2"
+COM_TIMECLOCK_CITY = "City"
+COM_TIMECLOCK_STATE = "State"
+COM_TIMECLOCK_ZIP = "Zip"
+COM_TIMECLOCK_COUNTRY = "Country"
+COM_TIMECLOCK_NOTES = "Notes"
+COM_TIMECLOCK_TIMECLOCK_HOLIDAYS = "Timeclock Holidays"
+COM_TIMECLOCK_PROJECT = "Project"
+COM_TIMECLOCK_WORK_DATE = "Work Date"
+COM_TIMECLOCK_TIMECLOCK_PROJECTS = "Timeclock Projects"
+COM_TIMECLOCK_NONE = "None"
+COM_TIMECLOCK_EDIT_CUSTOMER = "Edit Customer"
+COM_TIMECLOCK_ADD_USERS = "Add Users"
+COM_TIMECLOCK_REMOVE_USERS = "Remove Users"
+COM_TIMECLOCK_NAME = "Name"
+COM_TIMECLOCK_DESCRIPTION = "Description"
+COM_TIMECLOCK_MANAGER = "Manager"
+COM_TIMECLOCK_RESEARCH = "Research"
+COM_TIMECLOCK_TYPE = "Type"
+COM_TIMECLOCK_WORKERS_COMP_CODES = "Workers Comp Codes"
+COM_TIMECLOCK_CUSTOMER = "Customer"
+COM_TIMECLOCK_USERS = "Users"
+COM_TIMECLOCK_TIMECLOCK_TIMESHEETS = "Timeclock Timesheets"
+COM_TIMECLOCK_EDIT_PROJECT = "Edit Project"
+COM_TIMECLOCK_USER = "User"
+COM_TIMECLOCK_SELECT_USER = "Please select the user"
+COM_TIMECLOCK_USER_HELP = "The user.  Once selected this can not be changed for this record."
+COM_TIMECLOCK_HOURS = "Hours"
+COM_TIMECLOCK_CODE_DISABLED = "Code Currently Disabled"
+COM_TIMECLOCK_CHECK_DATABASE = "Check Database"
+COM_TIMECLOCK_CHECKING_DATABASE = "Checking your Database"
+COM_TIMECLOCK_NO_TESTS = "No Tests"
+COM_TIMECLOCK_TIMECLOCK_TOOLS = "Timeclock Tools"
+COM_TIMECLOCK_TIMECLOCK_USER_CONFIG = "Timeclock User Configuration"
+COM_TIMECLOCK_BY = "by"
+COM_TIMECLOCK_REPORTS = "Reports"
+COM_TIMECLOCK_START_DATE = "Start Date"
+COM_TIMECLOCK_END_DATE = "End Date"
+COM_TIMECLOCK_STATUS = "Status"
+COM_TIMECLOCK_PTO = "PTO"
+COM_TIMECLOCK_ADD_PROJECTS = "Add Projects"
+COM_TIMECLOCK_ADD_PROJECTS_FROM_USER = "Add Projects from User"
+COM_TIMECLOCK_REMOVE_PROJECTS = "Remove Projects"
+COM_TIMECLOCK_USER_STATUS = "User Status"
+COM_TIMECLOCK_PTO_CARRYOVER = "PTO Carryover"
+COM_TIMECLOCK_CARRIED_OVER_TO = "carried over to"
+COM_TIMECLOCK_EXPIRES = "Expires"
+COM_TIMECLOCK_HOLIDAY_PAY = "Holiday Pay"
+COM_TIMECLOCK_CHANGE_HISTORY = "Change History"
+COM_TIMECLOCK_OLD_VALUES = "Old Values"
+COM_TIMECLOCK_EDIT = "Edit"
+
+
+COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
+COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
+COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Allows users in the group to access their timesheet"
+COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
+
+COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_LABEL="Timeclock settings"
+COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_DESC="Settings that will be applied to timeclock"
+
+
