--- a/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
@@ -75,13 +75,22 @@ COM_TIMECLOCK_USER_MANAGER="User Manager"
 COM_TIMECLOCK_CUSTOMER="Customer"
 COM_TIMECLOCK_OR="or"
 COM_TIMECLOCK_TO="to"
-COM_TIMECLCOK_FROM="from"
-COM_TIMECLCOK_BY="by"
-COM_TIMECLCOK_ENTERED="Entered"
-COM_TIMECLCOK_GO="Go"
-COM_TIMECLCOK_DISPLAY_NUM="Display Num"
+COM_TIMECLOCK_FROM="from"
+COM_TIMECLOCK_BY="by"
+COM_TIMECLOCK_ENTERED="Entered"
+COM_TIMECLOCK_GO="Go"
+COM_TIMECLOCK_DISPLAY_NUM="Display Num"
 COM_TIMECLOCK_WORKED="Worked"
 COM_TIMECLOCK_EMPLOYEE="Employee"
 COM_TIMECLOCK_GROUP_BY="Group by"
 COM_TIMECLOCK_APPLY="Apply"
 COM_TIMECLOCK_NO_DATA_FOUND="No data found"
+
+COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
+COM_TIMECLOCK_PREFS_SAVED="Preferences Saved!"
+COM_TIMECLOCK_PREFS_FAILED="Error Saving Preferences"
+COM_TIMECLOCK_HOURS_SAVED="Hours Saved!"
+COM_TIMECLOCK_HOURS_FAILED="Error Saving Hours"
+COM_TIMECLOCK_PROJECT_NO_AUTH="You are not authorized to put time in that project."
+COM_TIMECLOCK_NO_PROJECTS="No projects for you to put time into."
+
