Fixed bug #2627.  There are still probably places where it is not translating, but I got most of them.  Everything now seems to work.

--- a/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
@@ -94,3 +94,6 @@ COM_TIMECLOCK_HOURS_FAILED="Error Saving Hours"
 COM_TIMECLOCK_PROJECT_NO_AUTH="You are not authorized to put time in that project."
 COM_TIMECLOCK_NO_PROJECTS="No projects for you to put time into."
 
+COM_TIMECLOCK_TIMESHEET_SORT="Timesheet sort"
+COM_TIMECLOCK_TIMESHEET_SORT_HELP="This is the order that the projects will appear in in the timesheet."
+COM_TIMECLOCK_TIMECLOCK_PREFS_FOR="Timeclock Preferences for "
