mod_timeclockinfo now installs correctly for bug #2627.

--- a/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -59,7 +59,7 @@ COM_TIMECLOCK_USER_SETTINGS_FAILED="Error Saving User Settings"
 
 COM_TIMECLOCK_FOUND_A_BUG = "Found a bug in ComTimeclock?"
 COM_TIMECLOCK_REPORT_IT_HERE = "Report it here"
-COM_TIMECLOCK_CONFIG = "Config"
+COM_TIMECLOCK_PREFERENCES = "Preferences"
 COM_TIMECLOCK_USER_CONFIGS = "User Configurations"
 COM_TIMECLOCK_CUSTOMERS = "Customers"
 COM_TIMECLOCK_PROJECTS = "Projects"
