I scoured the administrator code for stuff that wasn't translated.  I found quite a bit for bug #2627.

--- a/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -30,6 +30,11 @@
 COM_TIMECLOCK="Timeclock"
 COM_TIMECLOCK_DESCRIPTION="This component implements a timeclock for employees to track time."
 
+COM_TIMECLOCK_USER_EDIT_TITLE="User Configuration: <small>[ %s ]</small>"
+COM_TIMECLOCK_TIMESHEET_EDIT_TITLE="Timeclock Timesheets: <small>[ %s ]</small>"
+COM_TIMECLOCK_PROJECT_EDIT_TITLE="Project: <small>[ %s ]</small>"
+COM_TIMECLOCK_HOLIDAY_EDIT_TITLE="Timeclock Holidays: <small>[ %s ]</small>"
+
 COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
 
 COM_TIMECLOCK_PREFS_SAVED="Preferences Saved!"
@@ -74,38 +79,64 @@ COM_TIMECLOCK_NO_USER_GIVEN = "No User given!"
 COM_TIMECLOCK_ABOUT_TIMECLOCK = "About Timeclock"
 COM_TIMECLOCK_TIMECLOCK_PREFS = "Timeclock Preferences"
 COM_TIMECLOCK_USER_SETTINGS = "User Settings"
-COM_TIMECLOCK_MAX_DAILY_HOURS = "Max Daily Hours"
-COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
-COM_TIMECLOCK_MINIMUM_NOTE = "Minimum Note"
-COM_TIMECLOCK_USER_TYPES = "User Types"
 COM_TIMECLOCK_TIMESHEET = "Timesheet"
-COM_TIMECLOCK_FIRST_PAY_PERIOD_START = "First Pay Period Start"
-COM_TIMECLOCK_PAY_PERIOD_TYPE = "Pay Period Type"
-COM_TIMECLOCK_PAY_PERIOD_LENGTH = "Pay Period Length"
-COM_TIMECLOCK_TIMESHEET_VIEW_PERIOD = "Timesheet View Period"
-COM_TIMECLOCK_VIEW_PERIOD_LENGTH = "View Period Length"
-COM_TIMECLOCK_FIRST_VIEW_PERIOD_START = "First View Period Start"
 COM_TIMECLOCK_PAID_TIME_OFF = "Paid Time Off"
-COM_TIMECLOCK_ACCRUE_PTO = "Accrue PTO"
-COM_TIMECLOCK_ACCRUAL_RATES = "Accrual Rates"
-COM_TIMECLOCK_DAYS_BEFORE_ACCRUAL_BEGINS = "Days Before Accrual Begins"
-COM_TIMECLOCK_PTO_HOURS_PER_DAY = "PTO Hours / Day"
-COM_TIMECLOCK_ACCRUAL_PERIOD = "Accrual Period"
-COM_TIMECLOCK_ACCRUAL_TIME = "Accrual Time"
-COM_TIMECLOCK_DEFAULT_PTO_CARRYOVER_EXPIRATION = "Default PTO Carryover Expiration"
-COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO = "Acceptable Negative PTO"
 COM_TIMECLOCK_WORKERS_COMP = "Worker's Compensation"
-COM_TIMECLOCK_ENABLE = "Enable"
-COM_TIMECLOCK_CODES = "Codes"
 COM_TIMECLOCK_EXTRAS = "Extras"
+
+COM_TIMECLOCK_MAX_DAILY_HOURS = "Max Daily Hours"
+COM_TIMECLOCK_MAX_DAILY_HOURS_DESC="The maximum number of hours an employee is allowed to post in a day."
+COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
+COM_TIMECLOCK_DECIMAL_PLACES_DESC = "Default number of decimal places to show."
+COM_TIMECLOCK_MINIMUM_NOTE = "Minimum Note"
+COM_TIMECLOCK_MINIMUM_NOTE_DESC = "The minimum number of characters to accept as a note. Set to 0 to disable."
+COM_TIMECLOCK_USER_TYPES = "User Types"
+COM_TIMECLOCK_USER_TYPES_DESC = "One type per line. It can either be: shortname:longname or just longname. The order they show up here is the order they will be in the pulldown dialog. "
+COM_TIMECLOCK_FIRST_PAY_PERIOD_START = "First Pay Period Start"
+COM_TIMECLOCK_FIRST_PAY_PERIOD_START_DESC = "When the first pay period starts"
+COM_TIMECLOCK_PAY_PERIOD_TYPE = "Pay Period Type"
+COM_TIMECLOCK_PAY_PERIOD_TYPE_DESC = "The type of payperiod"
+COM_TIMECLOCK_PAY_PERIOD_LENGTH = "Pay Period Length"
+COM_TIMECLOCK_PAY_PERIOD_LENGTH_DESC = "The length of the pay period in days for a fixed length pay period"
+COM_TIMECLOCK_TIMESHEET_VIEW_PERIOD = "Timesheet View Period"
+COM_TIMECLOCK_TIMESHEET_VIEW_PERIOD_DESC = "How the user views their timesheet. "payperiod" sets this to the same as the payperiods."
+COM_TIMECLOCK_VIEW_PERIOD_LENGTH = "View Period Length"
+COM_TIMECLOCK_VIEW_PERIOD_LENGTH_DESC = "The length of the view period in days for a fixed length view period"
+COM_TIMECLOCK_FIRST_VIEW_PERIOD_START = "First View Period Start"
+COM_TIMECLOCK_FIRST_VIEW_PERIOD_START_DESC = "This is for calculating 1-Week and 2-Week views. The day this starts on will be shown as the first day of the week. This is ignored for 'payperiod' view."
+COM_TIMECLOCK_ACCRUE_PTO = "Accrue PTO"
+COM_TIMECLOCK_ACCRUE_PTO_DESC = "Select whether timeclock should keep track of PTO accrual."
+COM_TIMECLOCK_ACCRUAL_RATES = "Accrual Rates"
+COM_TIMECLOCK_ACCRUAL_RATES_DESC = "The first line is a colon separated list of user types. Every line after that each line is a colon separated list:<pre>[years of service]:[accrual rate for 1st type]:[accrual rate for 2nd type]...</pre><strong>The service is in years. The accrual rates are in days per year.</strong>"
+COM_TIMECLOCK_DAYS_BEFORE_ACCRUAL_BEGINS = "Days Before Accrual Begins"
+COM_TIMECLOCK_DAYS_BEFORE_ACCRUAL_BEGINS_DESC = "This is the number of days an employee has to work before PTO shows up."
+COM_TIMECLOCK_PTO_HOURS_PER_DAY = "PTO Hours / Day"
+COM_TIMECLOCK_PTO_HOURS_PER_DAY_DESC = "How many PTO hours does the user get per day listed above."
+COM_TIMECLOCK_ACCRUAL_PERIOD = "Accrual Period"
+COM_TIMECLOCK_ACCRUAL_PERIOD_DESC = "The user gets PTO hours periodically on this time frame"
+COM_TIMECLOCK_ACCRUAL_TIME = "Accrual Time"
+COM_TIMECLOCK_ACCRUAL_TIME_DESC = "When during the period is the time accrued"
+COM_TIMECLOCK_DEFAULT_PTO_CARRYOVER_EXPIRATION = "Default PTO Carryover Expiration"
+COM_TIMECLOCK_DEFAULT_PTO_CARRYOVER_EXPIRATION_DESC = "The default time that PTO carry over expires. This is in the form Month-Day. The year will be automatically added on for each year PTO carry over happens."
+COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO = "Acceptable Negative PTO"
+COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO_DESC = "This is the amount a user can go negative and still be within acceptable limits"
+COM_TIMECLOCK_ENABLE = "Enable"
+COM_TIMECLOCK_WC_ENABLE_DESC = "Enable the Worker's Compensation extension"
+COM_TIMECLOCK_CODES = "Codes"
+COM_TIMECLOCK_CODES_DESC = "Worker's Compensation codes. Put one per line. The first 4 characters of the line are the code, the rest is a description of the code."
 COM_TIMECLOCK_JPGRAPH_PATH = "JPGraph Path"
+COM_TIMECLOCK_JPGRAPH_PATH_DESC = "Enter the path to jpgraph.php."
 COM_TIMECLOCK_DISABLE_TIMECLOCK = "Disable Timeclock"
+COM_TIMECLOCK_DISABLE_TIMECLOCK_DESC = "This allows the timeclock system to be taken down for maintenance without taking the rest of your website down."
 COM_TIMECLOCK_DISABLE_MESSAGE = "Disable Message"
+COM_TIMECLOCK_DISABLE_MESSAGE_DESC = "This is the message that timeclock users will receive if the timeclock is down for maintenance."
+
 COM_TIMECLOCK_TIMECLOCK_CUSTOMERS = "Timeclock Customers"
 COM_TIMECLOCK_FILTER = "Filter"
 COM_TIMECLOCK_GO = "Go"
 COM_TIMECLOCK_RESET = "Reset"
 COM_TIMECLOCK_ACTIVE = "Active"
+COM_TIMECLOCK_INACTIVE = "Inactive"
 COM_TIMECLOCK_BILL_FOR_PTO = "Bill for Paid Time Off"
 COM_TIMECLOCK_CONTACT_NAME = "Contact Name"
 COM_TIMECLOCK_COMPANY = "Company"
@@ -134,6 +165,10 @@ COM_TIMECLOCK_CUSTOMER = "Customer"
 COM_TIMECLOCK_USERS = "Users"
 COM_TIMECLOCK_TIMECLOCK_TIMESHEETS = "Timeclock Timesheets"
 COM_TIMECLOCK_EDIT_PROJECT = "Edit Project"
+COM_TIMECLOCK_EDIT_USER = "Edit User"
+COM_TIMECLOCK_EDIT_TIMESHEET = "Edit Timesheet"
+COM_TIMECLOCK_EDIT_HOLIDAY = "Edit Holiday"
+COM_TIMECLOCK_EDIT_CUSTOMER = "Edit Customer"
 COM_TIMECLOCK_USER = "User"
 COM_TIMECLOCK_SELECT_USER = "Please select the user"
 COM_TIMECLOCK_USER_HELP = "The user.  Once selected this can not be changed for this record."
@@ -147,7 +182,17 @@ COM_TIMECLOCK_TIMECLOCK_USER_CONFIG = "Timeclock User Configuration"
 COM_TIMECLOCK_BY = "by"
 COM_TIMECLOCK_REPORTS = "Reports"
 COM_TIMECLOCK_START_DATE = "Start Date"
+COM_TIMECLOCK_START_DATE_USER_DESC = "When this user starts"
 COM_TIMECLOCK_END_DATE = "End Date"
+COM_TIMECLOCK_END_DATE_USER_DESC = "When this user leaves. Leave blank if the user is still employed."
+COM_TIMECLOCK_ACTIVE_USER_DESC = "Is this user active in the timeclock. 'No' means they will not be able to access any sort of timeclock."
+COM_TIMECLOCK_REPORTS_USER_DESC = "Can this user view reports."
+COM_TIMECLOCK_MANAGER_USER_DESC = "This is to set the supervisor for this user. It is used in the reports."
+COM_TIMECLOCK_USER_STATUS_USER_DESC = "The status of the user"
+COM_TIMECLOCK_PTO_CARRYOVER_USER_DESC = "The amount of carryover and the date it expires. The year listed is the year PTO is being carried into."
+COM_TIMECLOCK_HOLIDAY_PAY_USER_DESC = "The percentage of holiday pay this user gets"
+COM_TIMECLOCK_PROJECTS_USER_DESC = "This is just a list of projects."
+COM_TIMECLOCK_CHANGE_HISTORY_USER_DESC = "This is a list of changes that have happened to this user"
 COM_TIMECLOCK_STATUS = "Status"
 COM_TIMECLOCK_PTO = "PTO"
 COM_TIMECLOCK_ADD_PROJECTS = "Add Projects"
@@ -161,7 +206,16 @@ COM_TIMECLOCK_HOLIDAY_PAY = "Holiday Pay"
 COM_TIMECLOCK_CHANGE_HISTORY = "Change History"
 COM_TIMECLOCK_OLD_VALUES = "Old Values"
 COM_TIMECLOCK_EDIT = "Edit"
+COM_TIMECLOCK_ADD = "Add"
+COM_TIMECLOCK_LAST_VISIT="Last Visit"
+COM_TIMECLOCK_ID="Id"
+COM_TIMECLOCK_BILL_PTO="Bill PTO"
 
+COM_TIMECLOCK_CREATED="Created"
+COM_TIMECLOCK_CREATED_BY="Created by"
+
+COM_TIMECLOCK_ACTIVATE="Activate"
+COM_TIMECLOCK_DEACTIVATE="Deactivate"
 
 COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
 COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
@@ -171,4 +225,36 @@ COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timec
 COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_LABEL="Timeclock settings"
 COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_DESC="Settings that will be applied to timeclock"
 
+COM_TIMECLOCK_PROJECT_TIMESHEET_DESC="The project"
+COM_TIMECLOCK_WORK_DATE_TIMESHEET_DESC="The day the hours were worked"
+COM_TIMECLOCK_HOURS_TIMESHEET_DESC="The number of hours"
+COM_TIMECLOCK_NOTES_TIMESHEET_DESC="A description of the hours"
 
+COM_TIMECLOCK_PROJECT_HOLIDAY_DESC="The project.  </strong>You must have a project defined of type 'Holiday'<strong>"
+COM_TIMECLOCK_WORK_DATE_HOLIDAY_DESC="The day the hours were worked"
+COM_TIMECLOCK_HOURS_HOLIDAY_DESC="The number of hours"
+COM_TIMECLOCK_NOTES_HOLIDAY_DESC="A description of the hours"
+
+COM_TIMECLOCK_NAME_PROJECT_DESC = "The name of the project"
+COM_TIMECLOCK_DESCRIPTION_PROJECT_DESC = "A description of the project"
+COM_TIMECLOCK_MANAGER_PROJECT_DESC = "Who is the project manager?"
+COM_TIMECLOCK_RESEARCH_PROJECT_DESC = "Is this project research?"
+COM_TIMECLOCK_ACTIVE_PROJECT_DESC = "Is this project active?"
+COM_TIMECLOCK_TYPE_PROJECT_DESC = "The type of project."
+COM_TIMECLOCK_CATEGORY_PROJECT_DESC = "The category the project is in."
+COM_TIMECLOCK_WORKERS_COMP_CODES_PROJECT_DESC = "The worker's comp codes. Each code will be listed as a separate hours entry in the timeclock. Make sure you know what you are doing if you change these. Time is stored in one of six slots. If you change the worker's comp code on that slot it will change everything in the past and future that is attached to that slot."
+COM_TIMECLOCK_CUSTOMER_PROJECT_DESC = "The customer this project should be billed to"
+COM_TIMECLOCK_USERS_PROJECT_DESC = "This is the list of users that are attached to this project."
+
+
+COM_TIMECLOCK_ACTIVE_CUSTOMER_DESC = "Is this customer active?"
+COM_TIMECLOCK_BILL_FOR_PTO_CUSTOMER_DESC = "Should the billing report show a percentage of PTO based on how many hours the user worked on this project?"
+COM_TIMECLOCK_CONTACT_NAME_CUSTOMER_DESC = "The name of the contact person"
+COM_TIMECLOCK_COMPANY_CUSTOMER_DESC = "The name of the company"
+COM_TIMECLOCK_ADDRESS1_CUSTOMER_DESC = "The name of the address of the company"
+COM_TIMECLOCK_ADDRESS2_CUSTOMER_DESC = "The name of the address of the company"
+COM_TIMECLOCK_CITY_CUSTOMER_DESC = "The name of the city of the company"
+COM_TIMECLOCK_STATE_CUSTOMER_DESC = "The name of the state of the company"
+COM_TIMECLOCK_ZIP_CUSTOMER_DESC = "The name of the zip code of the company"
+COM_TIMECLOCK_COUNTRY_CUSTOMER_DESC = "The name of the country of the company"
+COM_TIMECLOCK_NOTES_CUSTOMER_DESC = "Any notes on this customer"
