Working on moving the config and user stuff into Joomla core.  That way it is less code to worry about.  This is for bug #2627.

--- a/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -34,6 +34,7 @@ COM_TIMECLOCK_USER_EDIT_TITLE="User Configuration: <small>[ %s ]</small>"
 COM_TIMECLOCK_TIMESHEET_EDIT_TITLE="Timeclock Timesheets: <small>[ %s ]</small>"
 COM_TIMECLOCK_PROJECT_EDIT_TITLE="Project: <small>[ %s ]</small>"
 COM_TIMECLOCK_HOLIDAY_EDIT_TITLE="Timeclock Holidays: <small>[ %s ]</small>"
+COM_TIMECLOCK_CUSTOMER_EDIT_TITLE="Timeclock Customer: <small>[ %s ]</small>"
 
 COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
 
@@ -78,12 +79,30 @@ COM_TIMECLOCK_THE_TIMESHEET = "The timesheet"
 COM_TIMECLOCK_NO_USER_GIVEN = "No User given!"
 COM_TIMECLOCK_ABOUT_TIMECLOCK = "About Timeclock"
 COM_TIMECLOCK_TIMECLOCK_PREFS = "Timeclock Preferences"
-COM_TIMECLOCK_USER_SETTINGS = "User Settings"
-COM_TIMECLOCK_TIMESHEET = "Timesheet"
-COM_TIMECLOCK_PAID_TIME_OFF = "Paid Time Off"
-COM_TIMECLOCK_WORKERS_COMP = "Worker's Compensation"
-COM_TIMECLOCK_EXTRAS = "Extras"
+COM_TIMECLOCK_USER_SETTINGS = "User"
+COM_TIMECLOCK_USER_SETTINGS_DESC="Settings that affect users"
+COM_TIMECLOCK_TIMESHEET_SETTINGS = "Timesheet"
+COM_TIMECLOCK_TIMESHEET_SETTINGS_DESC="Settings change how the timesheet works"
+COM_TIMECLOCK_PTO_SETTINGS = "Paid Time Off"
+COM_TIMECLOCK_PTO_SETTINGS_DESC="Settings for paid time off"
+COM_TIMECLOCK_WCOMP_SETTINGS = "Worker&rsquo;s Compensation"
+COM_TIMECLOCK_WCOMP_SETTINGS_DESC="Settings for Worker&rsquo;s Compensation.  This is a tax in the United States."
+COM_TIMECLOCK_EXTRA_SETTINGS = "Misc"
+COM_TIMECLOCK_EXTRA_SETTINGS_DESC="Extra settings that have no other home."
 
+COM_TIMECLOCK_PAID_TIME_OFF = "Paid Time Off"
+COM_TIMECLOCK_WORKERS_COMP = "Worker&rsquo;s Compensation"
+COM_TIMECLOCK_EXTRAS = "Extras"
+COM_TIMECLOCK_END_OF_PAY_PERIOD = "End of pay period"
+COM_TIMECLOCK_BEGINNING_OF_PAY_PERIOD = "Beginning of pay period"
+
+COM_TIMECLOCK_FIXED="Fixed"
+COM_TIMECLOCK_PAY_PERIOD = "Pay Period"
+COM_TIMECLOCK_WEEK="Week"
+COM_TIMECLOCK_MONTH="Month"
+COM_TIMECLOCK_YEAR="Year"
+
+COM_TIMECLOCK_CONFIGURATION="Timeclock Options"
 COM_TIMECLOCK_MAX_DAILY_HOURS = "Max Daily Hours"
 COM_TIMECLOCK_MAX_DAILY_HOURS_DESC="The maximum number of hours an employee is allowed to post in a day."
 COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
@@ -103,7 +122,7 @@ COM_TIMECLOCK_TIMESHEET_VIEW_PERIOD_DESC = "How the user views their timesheet. 
 COM_TIMECLOCK_VIEW_PERIOD_LENGTH = "View Period Length"
 COM_TIMECLOCK_VIEW_PERIOD_LENGTH_DESC = "The length of the view period in days for a fixed length view period"
 COM_TIMECLOCK_FIRST_VIEW_PERIOD_START = "First View Period Start"
-COM_TIMECLOCK_FIRST_VIEW_PERIOD_START_DESC = "This is for calculating 1-Week and 2-Week views. The day this starts on will be shown as the first day of the week. This is ignored for 'payperiod' view."
+COM_TIMECLOCK_FIRST_VIEW_PERIOD_START_DESC = "This is for calculating 1-Week and 2-Week views. The day this starts on will be shown as the first day of the week. This is ignored for &rsquo;payperiod&rsquo; view."
 COM_TIMECLOCK_ACCRUE_PTO = "Accrue PTO"
 COM_TIMECLOCK_ACCRUE_PTO_DESC = "Select whether timeclock should keep track of PTO accrual."
 COM_TIMECLOCK_ACCRUAL_RATES = "Accrual Rates"
@@ -121,9 +140,9 @@ COM_TIMECLOCK_DEFAULT_PTO_CARRYOVER_EXPIRATION_DESC = "The default time that PTO
 COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO = "Acceptable Negative PTO"
 COM_TIMECLOCK_ACCEPTABLE_NEGATIVE_PTO_DESC = "This is the amount a user can go negative and still be within acceptable limits"
 COM_TIMECLOCK_ENABLE = "Enable"
-COM_TIMECLOCK_WC_ENABLE_DESC = "Enable the Worker's Compensation extension"
+COM_TIMECLOCK_WC_ENABLE_DESC = "Enable the Worker&rsquo;s Compensation extension"
 COM_TIMECLOCK_CODES = "Codes"
-COM_TIMECLOCK_CODES_DESC = "Worker's Compensation codes. Put one per line. The first 4 characters of the line are the code, the rest is a description of the code."
+COM_TIMECLOCK_CODES_DESC = "Worker&rsquo;s Compensation codes. Put one per line. The first 4 characters of the line are the code, the rest is a description of the code."
 COM_TIMECLOCK_JPGRAPH_PATH = "JPGraph Path"
 COM_TIMECLOCK_JPGRAPH_PATH_DESC = "Enter the path to jpgraph.php."
 COM_TIMECLOCK_DISABLE_TIMECLOCK = "Disable Timeclock"
@@ -131,6 +150,7 @@ COM_TIMECLOCK_DISABLE_TIMECLOCK_DESC = "This allows the timeclock system to be t
 COM_TIMECLOCK_DISABLE_MESSAGE = "Disable Message"
 COM_TIMECLOCK_DISABLE_MESSAGE_DESC = "This is the message that timeclock users will receive if the timeclock is down for maintenance."
 
+COM_TIMECLOCK_TIMESHEET = "Timesheet"
 COM_TIMECLOCK_TIMECLOCK_CUSTOMERS = "Timeclock Customers"
 COM_TIMECLOCK_FILTER = "Filter"
 COM_TIMECLOCK_GO = "Go"
@@ -185,7 +205,7 @@ COM_TIMECLOCK_START_DATE = "Start Date"
 COM_TIMECLOCK_START_DATE_USER_DESC = "When this user starts"
 COM_TIMECLOCK_END_DATE = "End Date"
 COM_TIMECLOCK_END_DATE_USER_DESC = "When this user leaves. Leave blank if the user is still employed."
-COM_TIMECLOCK_ACTIVE_USER_DESC = "Is this user active in the timeclock. 'No' means they will not be able to access any sort of timeclock."
+COM_TIMECLOCK_ACTIVE_USER_DESC = "Is this user active in the timeclock. &rsquo;No&rsquo; means they will not be able to access any sort of timeclock."
 COM_TIMECLOCK_REPORTS_USER_DESC = "Can this user view reports."
 COM_TIMECLOCK_MANAGER_USER_DESC = "This is to set the supervisor for this user. It is used in the reports."
 COM_TIMECLOCK_USER_STATUS_USER_DESC = "The status of the user"
@@ -217,10 +237,6 @@ COM_TIMECLOCK_CREATED_BY="Created by"
 COM_TIMECLOCK_ACTIVATE="Activate"
 COM_TIMECLOCK_DEACTIVATE="Deactivate"
 
-COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
-COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
-COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Allows users in the group to access their timesheet"
-COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
 
 COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_LABEL="Timeclock settings"
 COM_TIMECLOCK_CONFIG_GREETING_SETTINGS_DESC="Settings that will be applied to timeclock"
@@ -230,7 +246,7 @@ COM_TIMECLOCK_WORK_DATE_TIMESHEET_DESC="The day the hours were worked"
 COM_TIMECLOCK_HOURS_TIMESHEET_DESC="The number of hours"
 COM_TIMECLOCK_NOTES_TIMESHEET_DESC="A description of the hours"
 
-COM_TIMECLOCK_PROJECT_HOLIDAY_DESC="The project.  </strong>You must have a project defined of type 'Holiday'<strong>"
+COM_TIMECLOCK_PROJECT_HOLIDAY_DESC="The project.  </strong>You must have a project defined of type &rsquo;Holiday&rsquo;<strong>"
 COM_TIMECLOCK_WORK_DATE_HOLIDAY_DESC="The day the hours were worked"
 COM_TIMECLOCK_HOURS_HOLIDAY_DESC="The number of hours"
 COM_TIMECLOCK_NOTES_HOLIDAY_DESC="A description of the hours"
@@ -242,7 +258,7 @@ COM_TIMECLOCK_RESEARCH_PROJECT_DESC = "Is this project research?"
 COM_TIMECLOCK_ACTIVE_PROJECT_DESC = "Is this project active?"
 COM_TIMECLOCK_TYPE_PROJECT_DESC = "The type of project."
 COM_TIMECLOCK_CATEGORY_PROJECT_DESC = "The category the project is in."
-COM_TIMECLOCK_WORKERS_COMP_CODES_PROJECT_DESC = "The worker's comp codes. Each code will be listed as a separate hours entry in the timeclock. Make sure you know what you are doing if you change these. Time is stored in one of six slots. If you change the worker's comp code on that slot it will change everything in the past and future that is attached to that slot."
+COM_TIMECLOCK_WORKERS_COMP_CODES_PROJECT_DESC = "The worker&rsquo;s comp codes. Each code will be listed as a separate hours entry in the timeclock. Make sure you know what you are doing if you change these. Time is stored in one of six slots. If you change the worker&rsquo;s comp code on that slot it will change everything in the past and future that is attached to that slot."
 COM_TIMECLOCK_CUSTOMER_PROJECT_DESC = "The customer this project should be billed to"
 COM_TIMECLOCK_USERS_PROJECT_DESC = "This is the list of users that are attached to this project."
 
@@ -258,3 +274,11 @@ COM_TIMECLOCK_STATE_CUSTOMER_DESC = "The name of the state of the company"
 COM_TIMECLOCK_ZIP_CUSTOMER_DESC = "The name of the zip code of the company"
 COM_TIMECLOCK_COUNTRY_CUSTOMER_DESC = "The name of the country of the company"
 COM_TIMECLOCK_NOTES_CUSTOMER_DESC = "Any notes on this customer"
+
+
+COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
+COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
+COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Allows users in the group to access their timesheet"
+COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
+
+COM_TIMECLOCK0="0"
