--- a/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
@@ -84,6 +84,7 @@ COM_TIMECLOCK_WORKED="Worked"
 COM_TIMECLOCK_EMPLOYEE="Employee"
 COM_TIMECLOCK_GROUP_BY="Group by"
 COM_TIMECLOCK_APPLY="Apply"
+COM_TIMECLOCK_SAVE="Save"
 COM_TIMECLOCK_NO_DATA_FOUND="No data found"
 
 COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
@@ -97,3 +98,5 @@ COM_TIMECLOCK_NO_PROJECTS="No projects for you to put time into."
 COM_TIMECLOCK_TIMESHEET_SORT="Timesheet sort"
 COM_TIMECLOCK_TIMESHEET_SORT_HELP="This is the order that the projects will appear in in the timesheet."
 COM_TIMECLOCK_TIMECLOCK_PREFS_FOR="Timeclock Preferences for "
+
+COM_TIMECLOCK_WCOMP_NOT_ENABLED_MSG="This report is not enabled.  Please enable Worker's Compensation."
