More work on bug #2627.  I got the user editing totally working, including modification dates on all of the stuff.

--- a/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -198,12 +198,23 @@ COM_TIMECLOCK_CHECK_DATABASE = "Check Database"
 COM_TIMECLOCK_CHECKING_DATABASE = "Checking your Database"
 COM_TIMECLOCK_NO_TESTS = "No Tests"
 COM_TIMECLOCK_TIMECLOCK_TOOLS = "Timeclock Tools"
+COM_TIMECLOCK_TIMECLOCK_TOOLS_DESC = "These tools are to help keep the timeclock database healthy and other things."
+COM_TIMECLOCK_TIMECLOCK_TOOLS_CHECK_DB = "Check Database"
+COM_TIMECLOCK_TIMECLOCK_TOOLS_CONVERT_PREFS = "Convert Prefs"
+COM_TIMECLOCK_KEY = "Key"
+COM_TIMECLOCK_NO_RESULT = "No Result"
+COM_TIMECLOCK_PASS = "Pass"
+COM_TIMECLOCK_PASS_MSG = "Everything looks good!"
+COM_TIMECLOCK_WARNING = "Warning"
+COM_TIMECLOCK_WARNING_MSG = "Means that it is a problem, but not fatal"
+COM_TIMECLOCK_FAIL = "Fail"
+COM_TIMECLOCK_FAIL_MSG = "This will cause major problems in the timeclock, and should be fixed immediately"
 COM_TIMECLOCK_TIMECLOCK_USER_CONFIG = "Timeclock User Configuration"
 COM_TIMECLOCK_BY = "by"
 COM_TIMECLOCK_REPORTS = "Reports"
 COM_TIMECLOCK_START_DATE = "Start Date"
-COM_TIMECLOCK_START_DATE_USER_DESC = "When this user starts"
 COM_TIMECLOCK_END_DATE = "End Date"
+COM_TIMECLOCK_START_DATE_USER_DESC = "When this user starts"
 COM_TIMECLOCK_END_DATE_USER_DESC = "When this user leaves. Leave blank if the user is still employed."
 COM_TIMECLOCK_ACTIVE_USER_DESC = "Is this user active in the timeclock. &rsquo;No&rsquo; means they will not be able to access any sort of timeclock."
 COM_TIMECLOCK_REPORTS_USER_DESC = "Can this user view reports."
@@ -275,6 +286,12 @@ COM_TIMECLOCK_ZIP_CUSTOMER_DESC = "The name of the zip code of the company"
 COM_TIMECLOCK_COUNTRY_CUSTOMER_DESC = "The name of the country of the company"
 COM_TIMECLOCK_NOTES_CUSTOMER_DESC = "Any notes on this customer"
 
+COM_TIMECLOCK_SPECIAL="Special"
+COM_TIMECLOCK_SPECIAL_DESC="This category is for PTO and Holiday time."
+COM_TIMECLOCK_UNPAID="Unpaid Time"
+COM_TIMECLOCK_UNPAID_DESC="This time is not used for billing customers or for payroll reports"
+COM_TIMECLOCK_GENERAL="General"
+COM_TIMECLOCK_GENERAL_DESC="This is uncategorized projects.  Everything without a category goes here."
 
 COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
 COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
