--- a/ComTimeclock/admin/plugins/timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
+++ b/ComTimeclock/admin/plugins/timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
@@ -31,9 +31,11 @@ PLG_USER_TIMECLOCKUSER="Timeclock User Plugin"
 PLG_USER_TIMECLOCKUSER_DESC="Allows information about users to be entered in the user manager"
 
 PLG_USER_TIMECLOCK_SLIDER_LABEL="Timeclock Settings"
+PLG_USER_TIMECLOCK_PTO_CARRYOVER_SLIDER="Timeclock Paid Time Off Carry Over"
+PLG_USER_TIMECLOCK_REMOVE_PROJECTS_SLIDER="Timeclock Project List (check to remove)"
 
-PLG_USER__TIMECLOCK_ACTIVE="Enable Timeclock"
-PLG_USER__TIMECLOCK_ACTIVE_DESC="If this is set to 'yes' then this user is enabled in the timeclock"
+PLG_USER_TIMECLOCK_ACTIVE="Enable Timeclock"
+PLG_USER_TIMECLOCK_ACTIVE_DESC="If this is set to 'yes' then this user is enabled in the timeclock"
 PLG_USER_TIMECLOCK_START_DATE = "Start Date"
 PLG_USER_TIMECLOCK_START_DATE_DESC = "When this user starts"
 PLG_USER_TIMECLOCK_END_DATE = "End Date"
@@ -44,11 +46,26 @@ PLG_USER_TIMECLOCK_MANAGER = "Manager"
 PLG_USER_TIMECLOCK_MANAGER_DESC = "This is to set the supervisor for this user. It is used in the reports."
 PLG_USER_TIMECLOCK_USER_STATUS = "User status"
 PLG_USER_TIMECLOCK_USER_STATUS_DESC = "The status of the user"
-PLG_USER_TIMECLOCK_PTO_CARRYOVER = "PTO Carryover"
+PLG_USER_TIMECLOCK_PTO_CARRYOVER = "PTO carry over for %s"
 PLG_USER_TIMECLOCK_PTO_CARRYOVER_DESC = "The amount of carryover and the date it expires. The year listed is the year PTO is being carried into."
+PLG_USER_TIMECLOCK_PTO_CARRYOVER_EXPIRES = "Carry over expires"
+PLG_USER_TIMECLOCK_PTO_CARRYOVER_EXPIRES_DESC = "This is the date the carryover expires."
 PLG_USER_TIMECLOCK_HOLIDAY_PAY = "Holiday pay"
 PLG_USER_TIMECLOCK_HOLIDAY_PAY_DESC = "The percentage of holiday pay this user gets"
 PLG_USER_TIMECLOCK_PROJECTS = "Projects"
 PLG_USER_TIMECLOCK_PROJECTS_DESC = "This is just a list of projects."
+PLG_USER_TIMECLOCK_REMOVE_PROJECTS = "Remove Projects"
+PLG_USER_TIMECLOCK_REMOVE_PROJECTS_DESC = "This is just a list of projects.  Check the box to remove the project from the user."
+PLG_USER_TIMECLOCK_ADD_PROJECTS = "Add Projects"
+PLG_USER_TIMECLOCK_ADD_PROJECTS_DESC = "Any projects selected here will be added to the user.  Use -shift- or -control- keys to select multiple"
 PLG_USER_TIMECLOCK_CHANGE_HISTORY = "Change History"
 PLG_USER_TIMECLOCK_CHANGE_HISTORY_DESC = "This is a list of changes that have happened to this user"
+PLG_USER_TIMECLOCK_ADD_PROJECTS_FROM_USER = "Add Projects from User"
+PLG_USER_TIMECLOCK_ADD_PROJECTS_FROM_USER_DESC = "Select a user here and the edited user will be added to all the projects that this user is in."
+
+PLG_USER_TIMECLOCK_PROJECT_LIST_EMPTY="User has no projects assigned"
+
+PLG_USER_TIMECLOCK_CHANGE_HISTORY_SLIDER="Timeclock User Change History"
+PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY="Change History"
+PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_DESC="This is a list of changes that have happened to this user"
+PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_EMPTY="No changes yet."
