Fixed bug #4571.  All of the strings should have correct "" around them.  If they do not, please post another bug.

--- a/ComTimeclock/site/language/fr-FR/fr-FR.com_timeclock.ini
+++ b/ComTimeclock/site/language/fr-FR/fr-FR.com_timeclock.ini
@@ -159,3 +159,4 @@ COM_TIMECLOCK_TIMECLOCK_PREFS_FOR="Préférences pour"
 
 
 COM_TIMECLOCK_WCOMP_NOT_ENABLED_MSG="Cette liste n'est pas activée.  Activer la compensation de travail svp."
+COM_TIMECLOCK_FOUND_A_BUG = " "
