--- a/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
+++ b/ComTimeclock/site/language/en-GB/en-GB.com_timeclock.ini
@@ -85,6 +85,9 @@ COM_TIMECLOCK_EMPLOYEE="Employee"
 COM_TIMECLOCK_GROUP_BY="Group by"
 COM_TIMECLOCK_APPLY="Apply"
 COM_TIMECLOCK_SAVE="Save"
+COM_TIMECLOCK_RESET="Reset"
+COM_TIMECLOCK_FILTER="Filter"
+COM_TIMECLOCK_IN="in"
 COM_TIMECLOCK_NO_DATA_FOUND="No data found"
 
 COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
@@ -100,3 +103,12 @@ COM_TIMECLOCK_TIMESHEET_SORT_HELP="This is the order that the projects will appe
 COM_TIMECLOCK_TIMECLOCK_PREFS_FOR="Timeclock Preferences for "
 
 COM_TIMECLOCK_WCOMP_NOT_ENABLED_MSG="This report is not enabled.  Please enable Worker's Compensation."
+
+COM_TIMECLOCK_FOUND_A_BUG = "Found a bug in ComTimeclock?"
+COM_TIMECLOCK_REPORT_IT_HERE = "Report it here"
+
+COM_TIMECLOCK_NO_NEW_HOURS="No new hours"
+COM_TIMECLOCK_UNKNOWN="Unknown"
+COM_TIMECLOCK_NO_NOTES_FOUND="No notes found"
+COM_HUGNET_REPORT_TYPE="Report Type"
+COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
