--- a/ComTimeclock/admin/plugins/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
+++ b/ComTimeclock/admin/plugins/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
@@ -30,9 +30,10 @@
 PLG_USER_TIMECLOCKUSER="Timeclock User Plugin"
 PLG_USER_TIMECLOCKUSER_DESC="Allows information about users to be entered in the user manager"
 
-PLG_USER_TIMECLOCK_SLIDER_LABEL="Timeclock Settings"
-PLG_USER_TIMECLOCK_PTO_CARRYOVER_SLIDER="Timeclock Paid Time Off Carry Over"
-PLG_USER_TIMECLOCK_REMOVE_PROJECTS_SLIDER="Timeclock Project List (check to remove)"
+PLG_USER_TIMECLOCK_SLIDER_LABEL="Timeclock"
+PLG_USER_TIMECLOCK_PTO_CARRYOVER_SLIDER="PTO Carry Over"
+PLG_USER_TIMECLOCK_REMOVE_PROJECTS_SLIDER="Project List"
+PLG_USER_TIMECLOCK_CHANGE_HISTORY_SLIDER="Change History"
 
 PLG_USER_TIMECLOCK_ACTIVE="Enable Timeclock"
 PLG_USER_TIMECLOCK_ACTIVE_DESC="If this is set to 'yes' then this user is enabled in the timeclock"
@@ -65,7 +66,6 @@ PLG_USER_TIMECLOCK_ADD_PROJECTS_FROM_USER_DESC = "Select a user here and the edi
 
 PLG_USER_TIMECLOCK_PROJECT_LIST_EMPTY="User has no projects assigned"
 
-PLG_USER_TIMECLOCK_CHANGE_HISTORY_SLIDER="Timeclock User Change History"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY="Change History"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_DESC="This is a list of changes that have happened to this user"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_EMPTY="No changes yet."
