Final commit on this old branch.

--- a/com_timeclock/admin/language/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/language/en-GB/en-GB.com_timeclock.ini
@@ -242,6 +242,11 @@ COM_TIMECLOCK_LAST_VISIT="Last Visit"
 COM_TIMECLOCK_ID="Id"
 COM_TIMECLOCK_BILL_PTO="Bill PTO"
 
+COM_TIMECLOCK_PROJECT="Project"
+COM_TIMECLOCK_PTO="Paid Time Off"
+COM_TIMECLOCK_HOLIDAY="Holiday"
+COM_TIMECLOCK_UNPAID="Unpaid"
+
 COM_TIMECLOCK_CREATED="Created"
 COM_TIMECLOCK_CREATED_BY="Created by"
 
