This fixes #8372.  The add on package has been setup.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -61,6 +61,9 @@ COM_TIMECLOCK_PROJECT_REMOVE_SAVED="Project Removed"
 COM_TIMECLOCK_PROJECT_REMOVE_FAILED="Error Removing Project"
 COM_TIMECLOCK_PROJECT_NO_PROJECTS="No projects to add"
 
+COM_TIMECLOCK_EXTRA_PACKAGES="Extra Packages"
+COM_TIMECLOCK_EXTRA_PACKAGES_DESC="These are extra packages that add features to Timeclock"
+
 COM_TIMECLOCK_TIMESHEET_SAVED="Timesheet Saved!"
 COM_TIMECLOCK_TIMESHEET_FAILED="Error Saving Timesheet"
 
