Added a per user cutoff date.  This fixes #8370.

--- a/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
+++ b/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
@@ -69,3 +69,6 @@ PLG_USER_TIMECLOCK_PROJECT_LIST_EMPTY="User has no projects assigned"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY="Change History"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_DESC="This is a list of changes that have happened to this user"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_EMPTY="No changes yet."
+
+PLG_USER_TIMECLOCK_NO_TIME_BEFORE="No Time Entry Before"
+PLG_USER_TIMECLOCK_NO_TIME_BEFORE_DESC="The user will not be able to enter hours worked before this date.  This is to allow payperiods to be locked so users can't enter time in them anymore."
