--- a/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
+++ b/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
@@ -100,3 +100,6 @@ PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY="Historique des changements"
 
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_DESC="Ceci est la liste des changements intervenus pour cet utilisateur"
 PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_EMPTY="Aucun changement enregistré à ce jour"
+
+PLG_USER_TIMECLOCK_NO_TIME_BEFORE="No Time Entry Before"
+PLG_USER_TIMECLOCK_NO_TIME_BEFORE_DESC="The user will not be able to enter hours worked before this date.  This is to allow payperiods to be locked so users can't enter time in them anymore."
